--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lodash": "^4.17.21",
     "mavon-editor": "^2.9.1",
     "nprogress": "^0.2.0",
+    "qrcodejs2": "^0.0.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "xss": "^1.0.9"
